Proper fix for New Chat button z-index

--- a/src/components/left/NewChatButton.scss
+++ b/src/components/left/NewChatButton.scss
@@ -3,7 +3,6 @@
   right: 1rem;
   bottom: 1rem;
   transform: translateY(5rem);
-  z-index: 1;
 
   transition: transform .25s cubic-bezier(0.34, 1.56, 0.64, 1);
 
