--- a/src/components/left/main/LeftMain.scss
+++ b/src/components/left/main/LeftMain.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  z-index: 1;
 
   > .Transition {
     flex-grow: 1;
